log
Wed, Mar 26, 2025  8:41:28 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:5: error: expected ';' before 'return'
     return list;
     ^~~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Wed, Mar 26, 2025  8:41:46 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c82cc38
Wed, Mar 26, 2025  8:45:29 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:43: error: 'Node {aka struct Node}' has no member named 'key'
     if(list->current) return list->current->key;
                                           ^~
Compilation failed
2fc4ae2
Wed, Mar 26, 2025  8:46:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
53fbaad
Wed, Mar 26, 2025  8:50:57 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
bc4da6a
Wed, Mar 26, 2025  8:57:05 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->current;
                 ^~~~
list.c:54:44: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         if(aux->current->next != NULL) aux = list->current->next;
                                            ^
cc1.exe: all warnings being treated as errors
Compilation failed
baf39fa
Wed, Mar 26, 2025  8:58:10 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->current;
                 ^~~~
list.c:54:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = list->current->next;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
c9ff99a
Wed, Mar 26, 2025  8:59:53 AM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->head;
                 ^~~~
list.c:53:14: error: 'List {aka struct List}' has no member named 'next'
     while(aux->next != NULL){
              ^~
list.c:54:19: error: 'List {aka struct List}' has no member named 'next'
         aux = list->next;
                   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
aeaa204
Wed, Mar 26, 2025  9:00:58 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->head;
                 ^~~~
list.c:54:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = list->current->next;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
2d611b8
Wed, Mar 26, 2025  9:08:26 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:53:14: error: 'Node {aka struct Node}' has no member named 'current'
     while(aux->current->next != NULL){
              ^~
Compilation failed
990826d
Wed, Mar 26, 2025  9:08:57 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|0
   [ INFO ] llamando a lastList
dfb9344
Wed, Mar 26, 2025  9:12:48 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
C:\Users\ESTUDI~1\AppData\Local\Temp\cc2LnmKl.o:test.c:(.text+0x68c): undefined reference to `lastList'
collect2.exe: error: ld returned 1 exit status
Compilation failed
84d1ed4
Wed, Mar 26, 2025  9:13:39 AM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
6cfa5df
Wed, Mar 26, 2025  9:15:04 AM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
532feb0
Wed, Mar 26, 2025  9:16:00 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7d49d06
Wed, Mar 26, 2025  9:17:14 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1e6d32c
Wed, Mar 26, 2025  9:18:38 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4b2c54f
